# seqsearch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
docs/: index.html  search.js  seqsearch.html
docs/seqsearch/: databases.html  index.html  search.html
docs/seqsearch/databases/: download.html  foraminifera.html  human.html  humgut.html  index.html  ncbi_16s.html  nr.html  nt.html  pfam.html  pr_two.html  refseq.html  silva.html  silva_mothur.html  string.html  tigrfam.html
docs/seqsearch/databases/mothur/: rdp.html  (+3 more)
docs/seqsearch/examples/: index.html
docs/seqsearch/search/: blast.html  core.html  hmmer.html  index.html  ncbi.html  parallel.html  vsearch.html
example/: simple_blast.py
example/blast_object/: simple_blast.py
example/seqsearch_object/: simple_query.py
scripts/: merge_blast_xml.py  parse.py  parse_blast_tabular.py  tmp_code.py
seqsearch/: __init__.py  blast.py  common.py  hmmer.py  ncbi.py  parallel.py  vsearch.py
seqsearch/databases/: __init__.py  download.py  foraminifera.py  human.py  humgut.py  ncbi_16s.py  nr.py  nt.py  pfam.py  pr_two.py  refseq.py  silva.py  silva_mothur.py  string.py  tigrfam.py
seqsearch/databases/mothur/: greengenes.py  rdp.py  silva.py
seqsearch/examples/: download.py
seqsearch/examples/blast_object/: simple_blast.py
seqsearch/examples/seqsearch_object/: simple_query.py
seqsearch/mapping/: bam.py  bam_and_sam.py  bwa.py  sam.py
seqsearch/search/: __init__.py  blast.py  core.py  hmmer.py  ncbi.py  parallel.py  vsearch.py
test/: current.py  merge.py  query.fasta  results.py  test.py
(+4 files in other folders)
